<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:weightSum="10"
    android:background="@android:color/background_dark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/welcome"
            android:id="@+id/welcome_textview"
            android:layout_gravity="center|top"
            android:layout_margin="5dp"
            android:padding="20dp"
            android:textColor="#ffffffff"
            android:layout_weight="2"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:text="@string/your_name"
                android:id="@+id/name_textview"
                android:textColor="#ffffffff"
                android:textIsSelectable="false"
                android:layout_gravity="center"
                android:layout_weight=".3"
                android:paddingTop="15dp"
                android:paddingLeft="5dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/name_edittext"
                android:padding="10dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@android:color/darker_gray"
                android:editable="true"
                android:hint="@string/name_hint"
                android:textColor="#ff0912ff"
                android:textColorHint="#ff0912ff"
                android:textIsSelectable="true"
                android:layout_weight=".7"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:padding="7dp"
            android:layout_weight="5">

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/latin"
                android:id="@+id/latin_button"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/greek"
                android:id="@+id/greek_button"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/mixed"
                android:id="@+id/mixed_button"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"/>
        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:text="@string/exit"
            android:id="@+id/exit_button"
            android:layout_gravity="center_horizontal"
            android:layout_weight="2"/>

    </LinearLayout>

